<resources>
    <string name="AC">AC</string>
    <string name="accept_class">Accept Class</string>
    <string name="accept_race">Accept Race</string>
    <string name="accept_scores">Accept Stats</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">BasicFantasy</string>
    <string name="armor">Armor</string>
    <string name="armor_name_heading">Armor:</string>
    <string name="armor_bonus_heading">Bonus:</string>
    <string name="attack_msg">To Hit: %1$d %2$s %3$d = %4$d\nDamage:  %5$d %6$s %7$d = %8$d</string>
    <string name="back">Back</string>
    <string name="buy_armor_title">Buy Armor</string>
    <string name="buy_equipment">Buy Equipment</string>
    <string name="buy_stuff_instructions">Make your selections, then click the \"Check Out\" button to return to the previous screen.  Gold will be deducted automatically.</string>
    <string name="buy_weapons_title">Buy Weapons</string>
    <string name="character_age">Age:</string>
    <string name="character_eye_color">Eye Color:</string>
    <string name="character_class">Class:</string>
    <string name="character_hair_color">Hair Color:</string>
    <string name="character_height">Height:(in)</string>
    <string name="character_name">Name:</string>
    <string name="character_weight">Weight:(lb)</string>
    <string name="checkout">Check Out</string>
    <string name="choose_class_title">Choose Your Class</string>
    <string name="choose_current_character">Choose A Character</string>
    <string name="choose_equip_title">Buy Your Equipment</string>
    <string name="choose_race_title">Choose Your Race</string>
    <string name="clear_all">Clear All</string>
    <string name="create_character">Create A Character</string>
    <string name="cur">CUR:</string>
    <string name="death_save">Death Ray or Poison</string>
    <string name="delete_character">Delete A Character</string>
    <string name="detailed_screen_str">STR</string>
    <string name="detailed_screen_int">INT</string>
    <string name="detailed_screen_wis">WIS</string>
    <string name="detailed_screen_dex">DEX</string>
    <string name="detailed_screen_con">CON</string>
    <string name="detailed_screen_cha">CHA</string>
    <string name="detailed_screen_str_stat">19</string>
    <string name="detailed_screen_int_stat">19</string>
    <string name="detailed_screen_wis_stat">19</string>
    <string name="detailed_screen_dex_stat">19</string>
    <string name="detailed_screen_con_stat">19</string>
    <string name="detailed_screen_cha_stat">19</string>
    <string name="display_mods">(%1$d)</string>
    <string name="dragon_save">Dragon Breath</string>
    <string name="enter_pers_info_title">Enter Your Personal Info</string>
    <string name="equipment">Equipment</string>
    <string name="existing_characters">Existing Character(s):</string>
    <string name="eye_color">Eye Color:</string>
    <string name="fists">Fists</string>
    <string name="free_purchase">Check this for free purchase</string>
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="hair_color">Hair Color:</string>
    <string name="heal">Heal</string>
    <string name="hp_cur">HP Cur: %1$d</string>
    <string name="hp_hint">##</string>
    <string name="hp_max">HP Max: %1$d</string>
    <string name="invalid_atributes">Invalid Attributes Detected</string>
    <string name="left">Left</string>
    <string name="level_string">Level: %1$d</string>
    <string name="magic_save">Magic Wands</string>
    <string name="main_equip_instructions">Enter the amount of gold given by your GM, or roll it yourself.</string>
    <string name="max">MAX:</string>
    <string name="notes">Notes</string>
    <string name="open_character">Open Current Character</string>
    <string name="paralysis_save">Paralysis or Turn to Stone</string>
    <string name="race">Race:</string>
    <string name="right">Right</string>
    <string name="roll_age">Roll Age</string>
    <string name="roll_button">Roll It</string>
    <string name="roll_gold">3d6 x 10</string>
    <string name="roll_scores">Roll Stats</string>
    <string name="roll_stats_title">Fill In Your Stats</string>
    <string name="save_info">Save Info</string>
    <string name="saving_throw_msg">Target Score: %1$d\nYour roll:  %2$d %3$s %4$d = %5$d</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="six_digit_invisible_hint">000000</string>
    <string name="spell_save">Rods, Staves, and Spells</string>
    <string name="title_activity_choose_armor_scrolling">ChooseArmorScrollingActivity</string>
    <string name="title_activity_create_character">CreateCharacterActivity</string>
    <string name="weapon1">Weapon 1</string>
    <string name="weapon2">Weapon 2</string>
    <string name="weapon3">Weapon 3</string>
    <string name="weapon4">Weapon 4</string>
    <string name="weapon5">Weapon 5</string>
    <string name="weapon_damage_heading">Damage:</string>
    <string name="weapon_damage_string">1d%1$d%2$s%3$d</string>
    <string name="weapon_screen_add_weapon">Add Weapon</string>
    <string name="weapons">Weapons</string>
    <string name="weapon_heading">Weapon:</string>
    <string name="xp_string">XP: %1$d</string>
    <string name="weapon_hit_bonus">Hit Bonus:</string>
    <string name="attributes">Attributes</string>
    <string name="saves_heading">Saving Throws</string>
    <string name="armor3">Armor</string>
    <string name="armor2">Armor</string>
    <string name="armor1">Armor</string>
    <string name="armor4">Armor</string>
    <string name="gender_string">Gender: %1$s</string>
    <string name="sex_string">Sex: %1$s</string>
    <string name="appearance_heading">Appearance</string>
    <string name="race_string">Race: %1$s</string>
    <string name="age_string">Age: %1$d</string>
    <string name="height_string">Height: %1$s</string>
    <string name="weight_string">Weight: %1$d</string>
    <string name="hair_string">Hair: %1$s</string>
    <string name="eyes_string">Eyes: %1$s</string>
    <string name="details_heading">Details</string>
    <string name="details_hint">Enter extra details here</string>
    <string name="gender_neither">Neither</string>
    <string name="sex_choice_hint">This is your character\'s \'genetics\'. It has no impact on your gender unless you wish it. A few spells, effects, etc. target your sex rather than gender.</string>
    <string name="choice_female">FEMALE</string>
    <string name="choice_male">MALE</string>
    <string name="race_choice_hint">Choose your character\'s race.</string>
    <string name="coinage_heading">Coinage</string>
    <string name="platinum_heading">PP</string>
    <string name="heading_gold">GP</string>
    <string name="treasure_hint">Enter individual treasure descriptions here</string>
    <string name="heading_treasure">Treasures</string>
    <string name="title_activity_treasure">Treasure</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_stats">Stats</string>
    <string name="title_activity_combat">Combat</string>

</resources>
