<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/sex_choice_hint" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RadioButton
            android:id="@+id/button_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_female"
            />

        <RadioButton
            android:id="@+id/button_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_male"
            />

    </RadioGroup>

</LinearLayout>