<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:measureWithLargestChild="true"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/top_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/character_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/customborder_top"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/top_section_text"
                android:textSize="18sp"
                tools:text="Gray Mouser" />

            <TextView
                android:id="@+id/character_class"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/customborder_top"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/top_section_text"
                android:textSize="18sp"
                tools:text="Thief 5" />

        </TableRow>
    </TableLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/appearance_section_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textAlignment="center">

            <TextView
                android:id="@+id/appearance_heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/customborder_middle_heading"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/middle_section_header_text"
                android:textSize="18sp"
                android:text="@string/appearance_heading" />

        </TableRow>

        <TableRow
            android:id="@+id/appearance_row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:textAlignment="center">

            <TextView
                android:id="@+id/gender_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/customborder_middle"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/middle_section_text"
                android:textSize="18sp"
                tools:text="@string/gender_string" />

            <TextView
                android:id="@+id/sex_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/customborder_middle"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/middle_section_text"
                android:textSize="18sp"
                tools:text="@string/sex_string" />
        </TableRow>

        <TableRow
            android:id="@+id/appearance_row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:textAlignment="center">

            <TextView
                android:id="@+id/race_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/customborder_middle"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/middle_section_text"
                android:textSize="18sp"
                tools:text="@string/race_string" />

            <TextView
                android:id="@+id/age_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/customborder_middle"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/middle_section_text"
                android:textSize="18sp"
                tools:text="@string/age_string" />
        </TableRow>

        <TableRow
            android:id="@+id/appearance_row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:textAlignment="center">

            <TextView
                android:id="@+id/height_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/customborder_middle"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/middle_section_text"
                android:textSize="18sp"
                tools:text="@string/height_string" />

            <TextView
                android:id="@+id/weight_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/customborder_middle"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/middle_section_text"
                android:textSize="18sp"
                tools:text="@string/weight_string" />
        </TableRow>

        <TableRow
            android:id="@+id/appearance_row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:textAlignment="center">

            <TextView
                android:id="@+id/hair_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/customborder_middle"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/middle_section_text"
                android:textSize="18sp"
                tools:text="@string/hair_string" />

            <TextView
                android:id="@+id/eyes_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/customborder_middle"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/middle_section_text"
                android:textSize="18sp"
                tools:text="@string/eyes_string" />
        </TableRow>
    </TableLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/details_section_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:textAlignment="center"
            android:background="@drawable/customborder_bottom_heading">

            <TextView
                android:id="@+id/details_heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/customborder_bottom_heading"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/bottom_section_header_text"
                android:textSize="18sp"
                android:text="@string/details_heading" />

        </TableRow>

        <TableRow
            android:focusableInTouchMode="true"
            android:id="@+id/details_section"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/customborder_bottom"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:textAlignment="center">

            <ScrollView
                android:id="@+id/details_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/customborder_bottom"
                android:gravity="center_horizontal"
                android:lines="10"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2">

                <EditText
                    android:id="@+id/details_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightgray"
                    android:gravity="start"
                    android:hint="@string/details_hint"
                    android:inputType="textMultiLine"
                    android:lines="10"
                    android:singleLine="false"
                    android:textAlignment="viewStart"
                    android:textColor="@color/bottom_section_text"
                    android:textSize="24sp"
                    android:visibility="visible" />

            </ScrollView>

        </TableRow>
    </TableLayout>

    <View
        android:id="@+id/divider_bottom"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/button_row_navigate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom|center"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:weightSum="2">

        <TextView
            android:id="@+id/left_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/customborder_navigate"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/left"
            android:textAlignment="center"
            android:textColor="@color/navigation_section_text"
            android:textSize="18sp"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/right_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/customborder_navigate"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/right"
            android:textAlignment="center"
            android:textColor="@color/navigation_section_text"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>